Fixed an issue that will report jquery is undefined during page load.

--- a/ImageUploaderForIG/views/layout.pug
+++ b/ImageUploaderForIG/views/layout.pug
@@ -2,6 +2,7 @@
 html
   head
     title= title
+    script(src="/javascripts/dependencies/jquery.min.js")
     script(src="/javascripts/dependencies/semantic.min.js")
     link(rel="stylesheet", href="/stylesheets/semantic.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
