Made the page contained within a responsive container.

--- a/ImageUploaderForIG/views/layout.pug
+++ b/ImageUploaderForIG/views/layout.pug
@@ -7,4 +7,5 @@ html
     link(rel="stylesheet", href="/stylesheets/semantic.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    div.ui.container
+        block content
