Added logic to test the screen size.

--- a/ImageUploaderForIG/views/index.pug
+++ b/ImageUploaderForIG/views/index.pug
@@ -6,6 +6,35 @@ block content
         i.instagram.icon
         div.content= title
 
+    div.ui.four.column.grid
+        div.widescreen.only.ten.wide.column
+            div.ui.segment Widescreen
+        div.widescreen.only.six.wide.column
+            div.ui.segment Widescreen
+        div.large.screen.only.six.wide.column
+            div.ui.segment Large Screen
+        div.large.screen.only.ten.wide.column
+            div.ui.segment Large Screen
+        div.tablet.only.mobile.only.eight.wide.column
+            div.ui.segment Tablet and Mobile
+        div.tablet.only.mobile.only.eight.wide.column
+            div.ui.segment Tablet and Mobile
+        div.mobile.only.sixteen.wide.column
+            div.ui.segment Mobile
+        div.computer.only.two.column.row
+            div.column
+                div.ui.segment Computer and Up
+            div.column
+                div.ui.segment Computer and Up
+        div.tablet.only.column
+            div.ui.segment Tablet Only Content
+        div.tablet.only.column
+            div.ui.segment Tablet Only Content
+        div.tablet.only.column
+            div.ui.segment Tablet Only Content
+        div.tablet.only.column
+            div.ui.segment Tablet Only Content
+
     div#loginPanel.ui.form
         div#usernameSection.field
             label User
